--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-This is Awesome!!!
+<!DOCTYPE html>
+<html>
+    <head>
+      <meta charset="UTF-8">
+<title>HomePage</title>
+    </head>
+  <body>
+      <h1> class="title">HomePage</h1>
+<img src="//www.unco.edu/_resources/images/core/branding/UNC2015-Header-blue-text.png" alt="University of Northern Colorado" />
+    <ul>
+      <li>
+        <a href="https://speded12.github.io/profile.html">My Profile</a>
+      </li>
+      <li>
+        <a href="https://speded12.github.io/inspire.html">My Hero</a>
+      </li>
+      <li>
+        <a href="https://speded12.github.io/amuse.html">My Amusement</a>
+      </li>
+    </ul>
+</body>
+</html>
