--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>HomePage</title>
     </head>
   <body>
-      <h1> class="title">HomePage</h1>
+      <h1 class="title">HomePage</h1>
 <img src="//www.unco.edu/_resources/images/core/branding/UNC2015-Header-blue-text.png" alt="University of Northern Colorado" />
     <ul>
       <li>
