--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
             <tbody>
               <tr>
                 <th>Index</th>
-                  <td></td><a href="https://speded12.github.io/index.html">https://speded12.github.io/index.html</a></td>
+                  <td><a href="https://speded12.github.io/index.html">https://speded12.github.io/index.html</a></td>
                <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fspeded12.github.io%2Findex.html">VALIDATE</a></td>
               </tr>
           <tr>
