--- a/test.html
+++ b/test.html
@@ -23,7 +23,7 @@
           <tr>
             <th>Profile</th>
             <td> <a href="https://speded12.github.io/profile.html">https://speded12.github.io/profile.html</a></td>
-            <td> <a hred="https://validator.w3.org/nu/?doc=https%3A%2F%2Fspeded12.github.io%2Fprofile.html">VALIDATE</a></td>
+            <td> <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fspeded12.github.io%2Fprofile.html">VALIDATE</a></td>
           </tr> 
               <tr>
                     <th>Template</th>
