--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Eddy's Sexy Pic</h1>
-    <img src="https://speded12.github.io/sleepy_pic" alt="Edgar's Pic" height="400" width="400">
+    <img src="https://speded12.github.io/images/sleepy_pic" alt="Edgar's Pic" height="400" width="400">
       <p>I really like sleeping.</p>
     </body>
 </html>
