--- a/inspire.html
+++ b/inspire.html
@@ -12,5 +12,6 @@
         <p>As a fellow athlete watching someone rise to the title of "The Greatest" is something that just pulls your heart strings. Something that lights a fire inside of you.</p>
         <p>It is something that makes you want to push harder at practice even when you feel like you can't. It's the desire to be as great as him that makes him inspirational to me.</p>
         <p><a href="https://en.wikipedia.org/wiki/Muhammad_Ali">Learn more about him....</a></p>
+        <p><a href="index.html"><img height="50" src="images/home.png" alt="Home Button"></a></p>
     </body>
 </html>
