--- a/amuse.html
+++ b/amuse.html
@@ -19,5 +19,6 @@
       <p>This is a snake game where you need to eat apples in order to grow. This is something I play with to pass the time when I'm bored.</p>
       <p>Try to beat my high-score of 78.</p>
       <a href="https://snake-game.io/">Snake Game</a>
+        <p><a href="index.html"><img height="100" src="images/home.png" alt="Home Button"></a></p>
     </body>
 </html>
