--- a/profile.html
+++ b/profile.html
@@ -8,5 +8,6 @@
         <h1>Eddy's Sexy Pic</h1>
     <img src="https://speded12.github.io/images/sleepy_pic" alt="Edgar's Pic" height="400" width="400">
       <p>I really like sleeping.</p>
+        <p><a href="index.html"><img height="100" src="images/home.png" alt="Home Button"></a></p>
     </body>
 </html>
