--- a/superhero.html
+++ b/superhero.html
@@ -83,7 +83,7 @@
                     <td>Bruce&nbsp;Wayne</td>
                     <td><a href="images/batman.jpg"><img src="images/batman.jpg" alt="Batman Pic"></a></td>
                     <td>
-                      <li>He's Rich</li>
+                      <li>Money</li>
                     </td>
                     <td>
                         <ul>
