--- a/superhero.html
+++ b/superhero.html
@@ -21,7 +21,7 @@
             }
             th
             {
-                background-color: light-blue;
+                background-color: rgb(159, 187, 5);
                 font-size: 18px;
             }
         </style>
