--- a/resume/index.html
+++ b/resume/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <nav>
-            <h1>Steven Sanchez</h1>
+            <h1>Edgar Garcia</h1>
             <ul>
                 <li><a href=index.html#contactinfo>Contact Info</a></li>
                 <li><a href=index.html#education>Education</a></li>
@@ -17,10 +17,10 @@
         </nav>
         <section id="contactinfo">
             <h2>Contact Info</h2>
-            <img src="images/sanchez-steven.png">
+            <img src="images/KCWY2464[1].JPG">
             <ul>
-                <li>Phone: 970-351-1520</li>
-                <li>Email: steven.sanchez@unco.edu</li>
+                <li>Phone: 720-416-7044</li>
+                <li>Email: Garc9893@bears.unco.edu</li>
             </ul>
             
         </section>
