--- a/resume/index.html
+++ b/resume/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="resume/css/style.css">
         <meta charset="UTF-8">
         <title>Resume</title>
     </head>
@@ -43,6 +43,14 @@
                 <li>Senior Business Analyst @ UNC <span class="date">(Dec 2016 - <strong>Present</strong>)</span></li>
                 <li>Adjunct Faculty Lecturer for MCB @ UNC <span class="date">(Aug 2013 - <strong>Present</strong>)</span></li>
                 <li>Senior Systems Admin @ UNC <span class="date">(Feb 2015 - Dec 2016)</span></li>
+            </ul>
+        </section>
+        <section id="skills">
+            <h2>Skills</h2>
+            <ul>
+                <li>Powerful Problem Solver</li>
+                <li>Effective Leader</li>
+                <li>Skilled Customer Support Representative</li>
             </ul>
         </section>
     </body>
