--- a/resume/index.html
+++ b/resume/index.html
@@ -28,11 +28,10 @@
             <h2>Education</h2>
             <ul>
                 <li>
-                    <h3>University of Northern Colorado <span class="date">(May 2009)</span></h3>
+                    <h3>University of Northern Colorado <span class="date">(Expected: May 2026)</span></h3>
                     <ul>
-                        <li>Major: Mathematics w/emphasis in Applied Statistics</li>
-                        <li>Minor: Computer Science</li>
-                        <li>Minor: Spanish</li>
+                        <li>Major: Computer Information System</li>
+                        <li>Minor: N/A</li>
                     </ul>
                 </li>
             </ul>
@@ -40,17 +39,17 @@
         <section id="experience">
             <h2>Experience</h2>
             <ul>
-                <li>Senior Business Analyst @ UNC <span class="date">(Dec 2016 - <strong>Present</strong>)</span></li>
-                <li>Adjunct Faculty Lecturer for MCB @ UNC <span class="date">(Aug 2013 - <strong>Present</strong>)</span></li>
-                <li>Senior Systems Admin @ UNC <span class="date">(Feb 2015 - Dec 2016)</span></li>
+                <li>Concessions Stand @ Byers High School <span class="date">(Aug 2019 - May 2020)</span></li>
+                <li>pharmacy Technician @ Benzer Pharmacy <span class="date">(May 2021 - May 2022)</span></li>
             </ul>
         </section>
         <section id="skills">
             <h2>Skills</h2>
             <ul>
-                <li>Powerful Problem Solver</li>
-                <li>Effective Leader</li>
-                <li>Skilled Customer Support Representative</li>
+                <li>Microsoft Applications: Word, PowerPoint, Excel, Outlook</li>
+                <li>Bilingual: Spanish and English</li>
+                <li>Proficient Customer Service</li>
+                <li>Basic C# Understanding</li>
             </ul>
         </section>
     </body>
