--- a/resume/index.html
+++ b/resume/index.html
@@ -28,11 +28,13 @@
             <h2>Education</h2>
             <ul>
                 <li>
-                    <h3>University of Northern Colorado <span class="date">(Expected: May 2026)</span></h3>
+                    <h3>Byers High School <span class="date">(Aug 2018-May 2021)</span></h3>
+                    <li></li><h3>University of Northern Colorado <span class="date">(Expected: May 2026)</span></h3>
                     <ul>
                         <li>Major: Computer Information System</li>
                         <li>Minor: N/A</li>
                     </ul>
+                </li>
                 </li>
             </ul>
         </section>
