--- a/resume/index.html
+++ b/resume/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="resume/css/style.css">
+        <link rel="stylesheet" href="css/main.css">
         <meta charset="UTF-8">
         <title>Resume</title>
     </head>
@@ -29,7 +29,8 @@
             <ul>
                 <li>
                     <h3>Byers High School <span class="date">(Aug 2018-May 2021)</span></h3>
-                    <li></li><h3>University of Northern Colorado <span class="date">(Expected: May 2026)</span></h3>
+                <li>
+                        <h3>University of Northern Colorado <span class="date">(Expected: May 2026)</span></h3>
                     <ul>
                         <li>Major: Computer Information System</li>
                         <li>Minor: N/A</li>
