--- a/resume/index.html
+++ b/resume/index.html
@@ -17,7 +17,7 @@
         </nav>
         <section id="contactinfo">
             <h2>Contact Info</h2>
-            <img src="images/KCWY2464[1].JPG">
+            <img src="images/profile.jpg">
             <ul>
                 <li>Phone: 720-416-7044</li>
                 <li>Email: Garc9893@bears.unco.edu</li>
