--- a/resume/index.html
+++ b/resume/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+     <meta charset="UTF-8">
     <head>
         <link rel="stylesheet" href="css/main.css">
         <meta charset="UTF-8">
