--- a/resume/index.html
+++ b/resume/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="resume/css/style.css">
+        <link rel="stylesheet" href="https://speded12.github.io/css/main.css">
         <meta charset="UTF-8">
         <title>Resume</title>
     </head>
@@ -17,7 +17,7 @@
         </nav>
         <section id="contactinfo">
             <h2>Contact Info</h2>
-            <img src="resume/profile.JPG">
+            <img src="https://speded12.github.io/resume/profile.JPG">
             <ul>
                 <li>Phone: 720-416-7044</li>
                 <li>Email: Garc9893@bears.unco.edu</li>
