--- a/resume/index.html
+++ b/resume/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="https://speded12.github.io/css/main.css">
+        <link rel="stylesheet" href="https://speded12.github.io/resume/css/style.css">
         <meta charset="UTF-8">
         <title>Resume</title>
     </head>
