--- a/resume/index.html
+++ b/resume/index.html
@@ -11,7 +11,7 @@
             <ul>
                 <li><a href=index.html#contactinfo>Contact Info</a></li>
                 <li><a href=index.html#education>Education</a></li>
-                <li><a href=index.html#experience>Experiences</a></li>
+                <li><a href=index.html#experience>Experience</a></li>
                 <li><a href=index.html#skills>Skills</a></li>
             </ul>
         </nav>
